# heroana

./: .gitignore  pyproject.toml
src/heroana/: Makefile  go.mod  main.go
src/heroana/cmd/: argparser_test.go  build.go
src/heroana/files/: files.go
src/heroana/generator/: inspector.go  inspector_test.go  types.go
src/heroana/generator/fixtures/: fixture.go
src/melo/: go.mod  main.go
src/melo/cli/: argparser.go  argparser_test.go  help.go
src/melo/cmd/: argparser.go  build.go  help.go
src/melo/files/: files.go  files_test.go  folders.go  folders_test.go
